--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 REACT_APP_GITHUB_URL = "https://api.github.com"
-REACT_APP_GITHUB_TOKEN = "Add_your_token"
+REACT_APP_GITHUB_TOKEN = "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"
